Refactored P element to Span, styled the data list.

--- a/projectDetail.css
+++ b/projectDetail.css
@@ -9,9 +9,18 @@
 
 .projectDetail-th
 {
-	margin-left: 40px;
-	margin-top: 4px;
-	margin-bottom: 4px;
-	margin-right: 0px;
 	padding: 0px;
+	margin-bottom: 5px;
+	margin-top: 0px;
+	margin-right: 0px;
+	margin-left: 0px;
+	display: block;
+}
+
+.projectDetail-td
+{
+	width: 50px;
+	margin: 0px;
+	padding: 0px;
+	display: inline-block;
 }
