--- a/projectDetail.css
+++ b/projectDetail.css
@@ -13,14 +13,22 @@
 	margin-bottom: 5px;
 	margin-top: 0px;
 	margin-right: 0px;
-	margin-left: 0px;
+	margin-left: 40px;
 	display: block;
 }
 
 .projectDetail-td
 {
-	width: 50px;
+	width: 220px;
 	margin: 0px;
-	padding: 0px;
 	display: inline-block;
+}
+
+.projectDetail-overview
+{
+	margin-left: 40px;
+	margin-top: 40px;
+	margin-bottom: 10px;
+	margin-right: 0px;
+	padding: 0px;
 }
