--- a/projectDetail.css
+++ b/projectDetail.css
@@ -24,6 +24,16 @@
 	display: inline-block;
 }
 
+.projectDetail-td-last
+{
+	width: 220px;
+	margin-top: 0px;
+	margin-bottom: 40px;
+	margin-left: 0px;
+	margin-right: 0px;
+	display: inline-block;
+}
+
 .projectDetail-overview
 {
 	margin-left: 40px;
@@ -31,4 +41,31 @@
 	margin-bottom: 10px;
 	margin-right: 0px;
 	padding: 0px;
+}
+
+.projectDetail-element
+{
+	margin-left: 40px;
+	margin-right: 40px;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	padding: 0px;
+}
+
+.projectDetail-h3
+{
+	margin-left: 40px;
+	margin-right: 40px;
+	margin-top: 20px;
+	margin-bottom: 10px;
+	padding: 0px;
+}
+
+#project-text-bottom
+{
+	margin-top: 0px;
+	margin-bottom: 40px;
+	margin-left: 0px;
+	margin-right: 0px;
+	display: block;
 }
