--- a/shared-content.css
+++ b/shared-content.css
@@ -70,6 +70,28 @@
 	float: right;
 }
 
+.shared-content-pictureHalfLeftWrap
+{
+	margin-left: 40px;
+	margin-right: 20px;
+	margin-bottom: 20px;
+	margin-top: 20px;
+	width: calc(49% - 40px);
+	padding: 0px;
+	float: left;
+}
+
+.shared-content-pictureHalfRightWrap
+{
+	margin-left: 20px;
+	margin-right: 40px;
+	margin-bottom: 20px;
+	margin-top: 20px;
+	width: calc(49% - 40px);
+	padding: 0px;
+	float: right;
+}
+
 /*---Styling for the hyperlinks----------------------------------------------------------------------------------------------------------------------*/
 
 .shared-content-inlineLinkRed
