--- a/aboutme.css
+++ b/aboutme.css
@@ -3,8 +3,11 @@
 	margin-top: 0px;
 	margin-left: 0px;
 	margin-right: 0px;
-	margin-bottom: 10px;
-	padding: 0px;
+	margin-bottom: 0px;
+	padding-bottom: 10px;
+	padding-top: 0px;
+	padding-right: 0px;
+	padding-left: 0px;
 }
 
 .aboutme-container p
