--- a/shared-content.css
+++ b/shared-content.css
@@ -56,6 +56,34 @@
 	display: block;
 }
 
+.shared-content-table
+{
+	margin-left: 40px;
+	margin-right: 40px;
+	margin-top: 0px;
+	margin-bottom: 0px;
+	padding: 0px;
+}
+
+.shared-content-table th
+{
+	border-bottom: 1px solid black;
+	padding-right: 0px;
+	padding-bottom: 0px;
+	padding-top: 0px;
+	padding-left: 0px;
+	margin: 0px;
+}
+
+.shared-content-table td
+{
+	padding-right: 10px;
+	padding-bottom: 0px;
+	padding-top: 0px;
+	padding-left: 0px;
+	margin: 0px;
+}
+
 /*---Styling for the pictures-----------------------------------------------------------------------------------------------------------------------*/
 
 .shared-content-pictureWide
