--- a/home.css
+++ b/home.css
@@ -1,10 +1,10 @@
 .home-container
 {
-	margin-top: 0px;
-	margin-bottom: 50px;
-	margin-left: 0px;
-	margin-right: 0px;
-	padding: 0px;
+	padding-top: 0px;
+	padding-bottom: 40px;
+	padding-left: 0px;
+	padding-right: 0px;
+	margin: 0px;
 }
 
 .home-container p
