Fixed a visual glitch on the about me page.

--- a/aboutme.css
+++ b/aboutme.css
@@ -9,3 +9,13 @@
 	padding-right: 0px;
 	padding-left: 0px;
 }
+
+.aboutme-anchor
+{
+	margin-top: 20px;
+	margin-left: 0px;
+	margin-right: 0px;
+	margin-bottom: 0px;
+	padding: 0px;
+	display: block;
+}
