--- a/shared-content.css
+++ b/shared-content.css
@@ -188,6 +188,28 @@
 	float: right;
 }
 
+.shared-content-pictureQuarterLeftWrap
+{
+	margin-left: 40px;
+	margin-right: 20px;
+	margin-bottom: 20px;
+	margin-top: 20px;
+	width: calc(25% - 40px);
+	padding: 0px;
+	float: left;
+}
+
+.shared-content-pictureQuarterRightWrap
+{
+	margin-left: 20px;
+	margin-right: 40px;
+	margin-bottom: 20px;
+	margin-top: 20px;
+	width: calc(25% - 40px);
+	padding: 0px;
+	float: right;
+}
+
 
 /*---Styling for the hyperlinks----------------------------------------------------------------------------------------------------------------------*/
 
