--- a/shared-content.css
+++ b/shared-content.css
@@ -10,6 +10,16 @@
 	clear: both;
 }
 
+.shared-content-h1
+{
+	margin-left: 40px;
+	margin-right: 40px;
+	margin-top: 30px;
+	margin-bottom: 10px;
+	padding: 0px;
+	clear: both;
+}
+
 .shared-content-h2
 {
 	margin-left: 40px;
