--- a/shared-content.css
+++ b/shared-content.css
@@ -17,6 +17,8 @@
 	margin-top: 30px;
 	margin-bottom: 10px;
 	padding: 0px;
+	display: inline-block;
+	width: calc(100% - 80px);
 	clear: both;
 }
 
@@ -27,6 +29,8 @@
 	margin-top: 30px;
 	margin-bottom: 10px;
 	padding: 0px;
+	display: inline-block;
+	width: calc(100% - 80px);
 	clear: both;
 }
 
@@ -37,6 +41,8 @@
 	margin-top: 30px;
 	margin-bottom: 10px;
 	padding: 0px;
+	display: inline-block;
+	width: calc(100% - 80px);
 	clear: both;
 }
 
@@ -141,6 +147,9 @@
 	margin-top: 0px;
 	margin-bottom: 0px;
 	padding: 0px;
+	display: inline-block;
+	width: calc(100% - 80px);
+	clear: both;
 }
 
 .shared-content-table th
