--- a/style.css
+++ b/style.css
@@ -101,9 +101,26 @@ body
 	cursor: pointer;
 }
 
+#menu_logo
+{
+	padding-right: 5px;
+	padding-left: 0px;
+	padding-bottom: 0px;
+	padding-top: 0px;
+	margin: 0px;
+	height: 100%;
+	float: left;
+	width: 50px;
+}
+
+#menu_logo:hover
+{
+	cursor: pointer;
+}
+
 .menuItems
 {
-	width: calc(100% - 180px);
+	width: calc(100% - 230px);
 	float: left;
 }
 
@@ -121,6 +138,11 @@ body
 	/*Only hover when a device is used that has fine mouse control*/
 	/*Stops buttons from visually staying pressed when a touch screen is used*/
     .menuItem:hover
+	{
+		background-color: #00E5EE;
+	}
+	
+	.menuFlag:hover
 	{
 		background-color: #00E5EE;
 	}
