Added the a lineSpace to the HTML generator.

--- a/shared-content.css
+++ b/shared-content.css
@@ -65,6 +65,12 @@
 	display: block;
 }
 
+.shared-content-lineSpace
+{
+	padding: 10px;
+	margin: 0px;
+}
+
 /*---Styling for the article group menu------------------------------------------------------------------------------------------------------------*/
 
 .shared-content-articleGroup
